<resources>
    <string name="app_name">HaizumApp</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="splashscreen_dari_aplikasi">Splashscreen dari aplikasi</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_disini">Daftar disini</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk_disini">Masuk disini</string>
    <string name="current_location">Current Location</string>
    <string name="postingan_terbaru">Postingan terbaru</string>
    <string name="message">message</string>
    <string name="tanggal">Tanggal</string>
    <string name="logohaizum">logohaizum</string>
    <string name="masukan_text">Masukan Text</string>
    <string name="postingan_masih_kosong">Postingan masih kosong</string>
    <string name="halaman_ini_masing_kosong">Halaman ini masing kosong</string>
    <string name="time_post">48 mins</string>
    <string name="text_post">TEXT POST</string>
    <string name="close_post">close post</string>
    <string name="post">Post</string>
    <string name="tuliskan_disini">Tuliskan disini ...</string>
</resources>
