<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_user_post_item"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tv_name_user_post_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_lengkap"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_toEndOf="@+id/img_user_post_item"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/tv_date_user_post_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tanggal"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/tv_message_user_post_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/message"
        android:maxLines="3"
        android:ellipsize="end"
        android:layout_toEndOf="@+id/img_user_post_item"
        android:layout_below="@+id/tv_name_user_post_item"/>



</RelativeLayout>