<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.home.post.PostActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/btn_close_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_close"
                    android:contentDescription="@string/close_post" />

                <Button
                    android:id="@+id/btn_post"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/btn_post"
                    android:text="@string/post"
                    android:textColor="@color/colorDarkText"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/logohaizum"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>


        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile_insert_post"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_account_circle_black_24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_profile_insert_post">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tuliskan_disini"
                android:inputType="textMultiLine"
                android:textColor="@color/colorText" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>